<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="MassenstromSensor" Id="{a5e4a91b-adb7-4e42-b950-51204c2ef267}">
    <Declaration><![CDATA[TYPE MassenstromSensor :
STRUCT
	ModbusAdresse:			BYTE := 12;
	Data: 					ARRAY[0..10] OF DWORD;	(*hier werden die abgefragen Register hineingeschrieben*)
	
//------hier sind die Messwerte deklariert, die vom Massenstromsensor per Modbus erfragt werden	
	rFliessgeschwindigkeit:  		REAL; 					(*[m/s]*)
	rVolumenstrom: 					REAL; 					(*[m³/s]*)
	rMassenstrom: 					REAL; 					(*[kg/s]*)
	rTemp:							REAL;					(*[°C]*)
	rDichte: 						REAL;					(*[kg/m³]*)
	
	
	bFliessrichtung:				BOOL;					(*TRUE bei normaler Fließrichtung, FALSE bei Strömungsumkehrung*)

	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>